unpackaged/main/default/objects/Research_Upload_Info__c/Research_Upload_Info__c.object-meta.xml
<CustomObject>
    <label>Research Upload Info</label>
    <nameField>
        <displayFormat>PU-{0000}</displayFormat>
        <label>Research Upload Info Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Research Upload Infos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>