unpackaged/main/default/objects/Research_Upload_Info__c/fields/Accountant_Firm_Id__c.field-meta.xml
<CustomField>
    <fullName>Accountant_Firm_Id__c</fullName>
    <label>Accountant Firm Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>