unpackaged/main/default/objects/Research_Upload_Info__c/fields/CSV_Upload_Date__c.field-meta.xml
<CustomField>
    <fullName>CSV_Upload_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>CSV Upload Date</label>
    <type>Date</type>
</CustomField>