unpackaged/main/default/objects/Research_Upload_Info__c/fields/Research_Project_Master__c.field-meta.xml
<CustomField>
    <fullName>Research_Project_Master__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Research Project Master</label>
    <referenceTo>Research_Project_Master__c</referenceTo>
    <relationshipLabel>Research Upload Infos</relationshipLabel>
    <relationshipName>Research_Upload_Infos</relationshipName>
    <type>Lookup</type>
</CustomField>