unpackaged/main/default/objects/Research_Upload_Info__c/fields/Research_Project_Master_Id__c.field-meta.xml
<CustomField>
    <fullName>Research_Project_Master_Id__c</fullName>
    <formula>IF(UXR_CSV_Staging__c!=&apos;&apos;, CASESAFEID(UXR_CSV_Staging__r.Research_Project_Master__c), CASESAFEID(Research_Project_Master__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Research Project Master Id</label>
    <type>Text</type>
</CustomField>