unpackaged/main/default/objects/Research_Upload_Info__c/fields/UXR_CSV_Staging__c.field-meta.xml
<CustomField>
    <fullName>UXR_CSV_Staging__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>UXR CSV Staging</label>
    <referenceTo>UXR_CSV_Staging__c</referenceTo>
    <relationshipLabel>Research Upload Infos</relationshipLabel>
    <relationshipName>Research_Upload_Infos</relationshipName>
    <type>Lookup</type>
</CustomField>